--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,9 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;700&display=swap");
+
+body {
+  font-family: "Comfortaa";
+}
