--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,14 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
+
+body {
+  @apply text-black;
+}
+
+h1, h2, h3, h4, h5, h6, p, a {
+  @apply text-black;
+}
+
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #170303;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #FFEDDA;
     --foreground: #ededed;
   }
 }
